--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
   <head>
     <title>Вера Большешапова</title>
     <meta charset="utf-8">
-    <meta name="keywords" content="мой сайт, html, привет бро">
-    <meta name="keywords" content="Этот сайт помогает создавать людям собственные сайты">
+    <meta name="keywords" content="Вера">
+    <meta name="keywords" content="Большешапова">
+    <meta name="keywords" content="Вера шлюха">
+    <meta name="keywords" content="Шлюха">
+    <meta name="keywords" content="Большешапова шлюха">
+    <meta name="keywords" content="Вера Большешапова шлюха">
+    <meta name="keywords" content="ЦО 10 давалка Вера">
+    <meta name="keywords" content="давалка иркутск">
+    <meta name="keywords" content="Дешевая шлюха">
+    <meta name="keywords" content="сосу 500р">
+    <meta name="keywords" content="Вера Большешапова, если есть машина пишите."> 
     <link rel="shortcut icon" href="https://atom.io/favicon.ico">
   </head>
   <body>
