--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <hr>
     <h3>Услуги</h1>
     <p>Сосу. 500р.</p>
+	<p>Секс в жопу. 100р.</p>
+	<p>Секс. 50р.</p>
     <hr>
     <h3> Контакты </h3>
     <a href="https://vk.com/baby.vrr_18">Мой ВКонтанте</a>
