--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Вера Большешапова</title>
+	  style type="text/css">
+  body {
+    color: red;
+    background-color: #000000}
+  </style>
     <meta charset="utf-8">
     <meta name="keywords" content="Вера">
     <meta name="keywords" content="Большешапова">
